Alignment fixes

--- a/style.css
+++ b/style.css
@@ -32,10 +32,6 @@ body {
 #intro-h {
     float: left;
     display: inline-block;
-    padding-top: 0.25em;
-    padding-bottom: 0.1em;
-    padding-left: 0.75em;
-    padding-right: 0.75em;
     font-size: 2em;
 }
 
